text sangraha - refactoring 3